--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <!-- START ROW 2 -->
         <div class="row d-flex justify-content-center align-items-center">
           <!--  -->
-          <!-- CS50 Finance -->
+          <!-- Stock Trader -->
           <!--  -->
           <div
             id="flip-card-finance"
@@ -383,17 +383,16 @@
                   <div
                     class="row d-flex justify-content-center align-items-center m-0 card-body cs50-finance-back"
                   >
-                    <p class="col-10 mb-2 proj-p">
+                    <p class="col-10 mt-2 mb-2 proj-p">
                       <strong class="mb-2"
-                        >CS50 Finance (site coming soon)</strong
+                        >Stock Trader App (site coming soon)</strong
                       >
                       A web app created with the Flask framework together with a
-                      SQL database that allows users to 'purchase' and 'sell'
-                      stocks based on real-time data pulled from the IEX
-                      Exchange via the IEX Cloud API. This project was part of
-                      an assignment for CS50's Introduction to Computer Science
-                      so some of the code was written by instructors at Harvard.
-                      See markdown on GitHub for more details.
+                      SQL database where users can 'purchase' and 'sell' stocks
+                      based on real-time data pulled from the IEX Exchange via
+                      the IEX Cloud API. This project was part of an assignment
+                      for HarvardX's CS50 course. See markdown on GitHub for
+                      more details.
                     </p>
 
                     <div class="row justify-content-center mb-5 links">
@@ -410,7 +409,7 @@
             </div>
           </div>
           <!--  -->
-          <!-- CS50 Speller -->
+          <!-- Spellchecker -->
           <!--  -->
           <div
             id="flip-card-speller"
@@ -427,14 +426,14 @@
                     class="row d-flex justify-content-center align-items-center m-0 card-body cs50-speller-back"
                   >
                     <p class="col-10 mb-2 proj-p">
-                      <strong class="mb-2">CS50 Speller</strong>
+                      <strong class="mb-2">Spellchecker</strong>
                       A command-line application written in C that enables users
                       to spellcheck .txt files. The output includes a list of
-                      misspelled words plus some stats on the time taken to
-                      execute various parts of the program. The primary purpose
-                      of the project was to investigate the pros and cons of
-                      different ways of loading the dictionary into memory using
-                      varying data structures and methods.
+                      misspelled words plus stats on the time taken to execute
+                      various parts of the program. The primary purpose of the
+                      project was to investigate the pros and cons of loading
+                      the dictionary into memory using varying data structures
+                      and programming methods.
                     </p>
 
                     <div class="row justify-content-center mb-5 links">
@@ -608,7 +607,7 @@
 
         <div class="container-fluid projects-small-device mb-5">
           <!--  -->
-          <!-- CS50 Finance -->
+          <!-- Stock Trader -->
           <!--  -->
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
@@ -623,16 +622,14 @@
               <h2
                 class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
               >
-                CS50 Finance (site coming soon)
+                Stock Trader App (site coming soon)
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
                 A web app created with the Flask framework together with a SQL
-                database that allows users to 'purchase' and 'sell' stocks based
-                on real-time data pulled from the IEX Exchange via the IEX Cloud
-                API. This project was part of an assignment for CS50's
-                Introduction to Computer Science so some of the code was written
-                by instructors at Harvard. See markdown on GitHub for more
-                details.
+                database where users can 'purchase' and 'sell' stocks based on
+                real-time data pulled from the IEX Exchange via the IEX Cloud
+                API. This project was part of an assignment for HarvardX's CS50
+                course. See markdown on GitHub for more details.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
@@ -656,7 +653,7 @@
 
         <div class="container-fluid projects-small-device mb-5">
           <!--  -->
-          <!-- CS50 Speller -->
+          <!-- Spellchecker -->
           <!--  -->
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
@@ -671,16 +668,15 @@
               <h2
                 class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
               >
-                CS50 Speller
+                Spellchecker
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
                 A command-line application written in C that enables users to
                 spellcheck .txt files. The output includes a list of misspelled
-                words plus some stats on the time taken to execute various parts
-                of the program. The primary purpose of the project was to
-                investigate the pros and cons of different ways of loading the
-                dictionary into memory using varying data structures and
-                programming methods.
+                words plus stats on the time taken to execute various parts of
+                the program. The primary purpose of the project was to
+                investigate the pros and cons of loading the dictionary into
+                memory using varying data structures and programming methods.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
