deploy bytesized reviews to heroku and update urls

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="row justify-content-center mb-5 links">
                       <a
                         class="col-4 btn link-visit rounded-5"
-                        href="https://bytesized-book-reviews.onrender.com/"
+                        href="https://bytesized-book-reviews-f7646a733018.herokuapp.com/"
                         target="_blank"
                         >Visit Website</a
                       >
@@ -485,7 +485,7 @@
               >
                 <a
                   class="col-4 btn link-visit rounded-5"
-                  href="https://bytesized-book-reviews.onrender.com/"
+                  href="https://bytesized-book-reviews-f7646a733018.herokuapp.com/"
                   target="_blank"
                   >Visit Website</a
                 >
