add stock trader site links

--- a/index.html
+++ b/index.html
@@ -384,9 +384,7 @@
                     class="row d-flex justify-content-center align-items-center m-0 card-body cs50-finance-back"
                   >
                     <p class="col-10 mt-2 mb-2 proj-p">
-                      <strong class="mb-2"
-                        >Stock Trader App (site coming soon)</strong
-                      >
+                      <strong class="mb-2">Stock Trader App</strong>
                       A web app created with the Flask framework together with a
                       SQL database where users can 'purchase' and 'sell' stocks
                       based on real-time data pulled from the IEX Exchange via
@@ -396,6 +394,11 @@
                     </p>
 
                     <div class="row justify-content-center mb-5 links">
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
+                        >Visit Website</a
+                      >
                       <a
                         class="col-4 btn link-code rounded-5"
                         href="https://github.com/jazzorpheus/finance"
@@ -622,7 +625,7 @@
               <h2
                 class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
               >
-                Stock Trader App (site coming soon)
+                Stock Trader App
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
                 A web app created with the Flask framework together with a SQL
@@ -634,6 +637,11 @@
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
               >
+                <a
+                  class="col-4 btn link-code rounded-5"
+                  href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
+                  >Visit Website</a
+                >
                 <a
                   class="col-4 btn link-code rounded-5"
                   href="https://github.com/jazzorpheus/finance"
