fix stock trader link-code to link-visit

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
               >
                 <a
-                  class="col-4 btn link-code rounded-5"
+                  class="col-4 btn link-visit rounded-5"
                   href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
                   >Visit Website</a
                 >
