update mocktrader images

--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
                       <a
                         class="col-4 btn link-visit rounded-5"
                         href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
+                        target="_blank"
                         >Visit Website</a
                       >
                       <a
@@ -640,6 +641,7 @@
                 <a
                   class="col-4 btn link-visit rounded-5"
                   href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
+                  target="_blank"
                   >Visit Website</a
                 >
                 <a
