amend project descriptions

--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
                       A full-stack, dynamic and responsive web application that
                       allows registered users to publish their own book reviews.
                       Created principally with Node, Express, Bootstrap, and
-                      MongoDB. See markdown on GitHub for full details on
-                      features.
+                      MongoDB. See markdown on GitHub for video demo.
                     </p>
 
                     <div class="row justify-content-center mb-5 links">
@@ -481,8 +480,8 @@
                 A full-stack, dynamic and responsive web application that allows
                 registered users to publish their own book reviews. Created
                 principally with Node, Express, Bootstrap, and MongoDB. See
-                markdown on GitHub for full details on features. (Please allow
-                website time to load.)
+                markdown on GitHub for a video demo and full details on
+                features.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
