update code for mockTrader

--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="card flip-card-front">
-                  <div class="card-body cs50-finance-front"></div>
+                  <div class="card-body finance-front"></div>
                 </div>
 
                 <div class="card flip-card-back">
                   <div
-                    class="row d-flex justify-content-center align-items-center m-0 card-body cs50-finance-back"
+                    class="row d-flex justify-content-center align-items-center m-0 card-body finance-back"
                   >
                     <p class="col-10 mt-2 mb-2 proj-p">
                       <strong class="mb-2">Stock Trader App</strong>
@@ -401,7 +401,7 @@
                       >
                       <a
                         class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/finance"
+                        href="https://github.com/jazzorpheus/mock-trader"
                         target="_blank"
                         >Source Code</a
                       >
@@ -616,7 +616,7 @@
             <div
               class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone"
             >
-              <img src="images/CS50Finance-mobile.png" alt="" />
+              <img src="images/finance-mobile.png" alt="" />
             </div>
 
             <div
@@ -645,7 +645,7 @@
                 >
                 <a
                   class="col-4 btn link-code rounded-5"
-                  href="https://github.com/jazzorpheus/finance"
+                  href="https://github.com/jazzorpheus/mock-trader"
                   target="_blank"
                   >Source Code</a
                 >
