edit to-do list descriptions

--- a/index.html
+++ b/index.html
@@ -286,10 +286,13 @@
 
                 <div class="card flip-card-back">
                   <div
-                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
+                    class="row d-flex justify-content-center align-items-center pt-4 m-0 card-body"
                   >
                     <p class="col-10 mb-3 proj-p">
-                      <strong class="mb-4">React To-Do List</strong>
+                      <strong class="mb-4"
+                        >React To-Do List <br />
+                        (CORS Error fix coming soon plus new features)</strong
+                      >
                       A basic to-do list web application made using the React
                       framework that allows the user to create, check off, and
                       delete to-do list items. Each to-do item features a
@@ -531,9 +534,10 @@
                 To-Do List App
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
-                A basic to-do list web application made using the React
-                framework that allows the user to create, check off, and delete
-                to-do list items. Each to-do item features a datetime stamp.
+                (CORS Error fix coming soon plus new features) A basic to-do
+                list web application made using the React framework that allows
+                the user to create, check off, and delete to-do list items. Each
+                to-do item features a datetime stamp.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
