--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
           </div>
           <!--  -->
-          <!-- To-Do List -->
+          <!-- Shopping List -->
           <!--  -->
           <div
             id="flip-card-todolist"
@@ -281,7 +281,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="card flip-card-front">
-                  <div class="card-body to-do-list-front"></div>
+                  <div class="card-body shopping-list-front"></div>
                 </div>
 
                 <div class="card flip-card-back">
@@ -289,26 +289,27 @@
                     class="row d-flex justify-content-center align-items-center pt-4 m-0 card-body"
                   >
                     <p class="col-10 mb-3 proj-p">
-                      <strong class="mb-4"
-                        >React To-Do List <br />
-                        (CORS Error fix coming soon plus new features)</strong
+                      <strong class="mb-2"
+                        >React Shopping List <br />
+                        (Under development)</strong
                       >
-                      A basic to-do list web application made using the React
-                      framework that allows the user to create, check off, and
-                      delete to-do list items. Each to-do item features a
-                      datetime stamp.
+                      A shopping/groceries list web app made with React and
+                      Material UI that allows the user to create, check off, and
+                      delete shopping list items sorted by category. The user
+                      can optionally input product prices and quantites which
+                      the app keeps track of and renders total costs.
                     </p>
 
-                    <div class="row justify-content-center mt-2 mb-5 links">
+                    <div class="row justify-content-center mt-1 mb-5 links">
                       <a
                         class="col-4 btn link-visit rounded-5"
-                        href="https://jazzorpheus.github.io/to-do-list/"
+                        href="https://jazzorpheus.github.io/shopping-list/"
                         target="_blank"
                         >Visit Website</a
                       >
                       <a
                         class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/to-do-list"
+                        href="https://github.com/jazzorpheus/shopping-list"
                         target="_blank"
                         >Source Code</a
                       >
@@ -515,14 +516,14 @@
           <hr />
         </div>
         <!--  -->
-        <!-- To-Do List -->
+        <!-- Shopping Sist -->
         <!--  -->
         <div class="container-fluid projects-small-device mt-5">
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
               class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone"
             >
-              <img src="images/to-do-list-mobile.png" alt="" />
+              <img src="images/shopping-list-mobile.png" alt="" />
             </div>
 
             <div
@@ -531,26 +532,28 @@
               <h2
                 class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
               >
-                To-Do List App
+                React Shopping List
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
-                (CORS Error fix coming soon plus new features) A basic to-do
-                list web application made using the React framework that allows
-                the user to create, check off, and delete to-do list items. Each
-                to-do item features a datetime stamp.
+                (Under development) <br />
+                A shopping/groceries list web app made with React and Material
+                UI that allows the user to create, check off, and delete
+                shopping list items sorted by category. The user can optionally
+                input product prices and quantites which the app keeps track of
+                and renders total costs.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
               >
                 <a
                   class="col-4 btn link-visit rounded-5"
-                  href="https://jazzorpheus.github.io/to-do-list/"
+                  href="https://jazzorpheus.github.io/shopping-list/"
                   target="_blank"
                   >Visit Website</a
                 >
                 <a
                   class="col-4 btn link-code rounded-5"
-                  href="https://github.com/jazzorpheus/to-do-list"
+                  href="https://github.com/jazzorpheus/shopping-list"
                   target="_blank"
                   >Source Code</a
                 >
