--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="card flip-card-front">
-                  <div class="card-body shopping-list-front"></div>
+                  <div class="card-body shopping-front"></div>
                 </div>
 
                 <div class="card flip-card-back">
