--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
                   <div
                     class="row d-flex justify-content-center align-items-center pt-4 m-0 card-body"
                   >
-                    <p class="col-10 mb-3 proj-p">
+                    <p class="col-10 mb-2 proj-p">
                       <strong class="mb-2"
                         >React Shopping List <br />
                         (Under development)</strong
                       >
                       A shopping/groceries list web app made with React and
                       Material UI that allows the user to create, check off, and
-                      delete shopping list items sorted by category. The user
+                      delete shopping list items grouped by category. The user
                       can optionally input product prices and quantites which
                       the app keeps track of and renders total costs.
                     </p>
@@ -538,7 +538,7 @@
                 (Under development) <br />
                 A shopping/groceries list web app made with React and Material
                 UI that allows the user to create, check off, and delete
-                shopping list items sorted by category. The user can optionally
+                shopping list items grouped by category. The user can optionally
                 input product prices and quantites which the app keeps track of
                 and renders total costs.
               </p>
