replace MockTrader website url with video demo

--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
                     <div class="row justify-content-center mb-5 links">
                       <a
                         class="col-4 btn link-visit rounded-5"
-                        href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
+                        href="https://youtu.be/uEFdlHU87Ik"
                         target="_blank"
-                        >Visit Website</a
+                        >Video Demo</a
                       >
                       <a
                         class="col-4 btn link-code rounded-5"
@@ -649,9 +649,9 @@
               >
                 <a
                   class="col-4 btn link-visit rounded-5"
-                  href="https://mock-stock-trader-bba66fafe212.herokuapp.com/"
+                  href="https://youtu.be/uEFdlHU87Ik"
                   target="_blank"
-                  >Visit Website</a
+                  >Video Demo</a
                 >
                 <a
                   class="col-4 btn link-code rounded-5"
